testdata/baselines/reference/submodule/compiler/unusedTypeParameterInFunction1.errors.txt
unusedTypeParameterInFunction1.ts(1,13): error TS6196: 'T' is declared but never used.


==== unusedTypeParameterInFunction1.ts (1 errors) ====
    function f1<T>() {
                ~
!!! error TS6196: 'T' is declared but never used.
    
    }